[ignore_changes] Fixed z-index issue

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -218,11 +218,13 @@ html {
   left: 0;
   top: 54px;
   width: 100%;
+  z-index: 100 !important;
 }
 
 .cui .sidebar {
   position: fixed;
   top: 54px;
+  z-index: 200 !important;
 }
 
 .main-margin-top {
